--- a/assets/scss/optimized-checkout.scss
+++ b/assets/scss/optimized-checkout.scss
@@ -102,7 +102,7 @@ body {
     background-color: stencilColor("optimizedCheckout-buttonPrimary-backgroundColor");
     border-color: stencilColor("optimizedCheckout-buttonPrimary-borderColor");
     color: stencilColor("optimizedCheckout-buttonPrimary-color");
-    border-radius: 9999px;
+    border-radius: 6px;
     text-transform: initial;
     font-family: stencilFontFamily("optimizedCheckout-buttonPrimary-font"), Arial, Helvetica, sans-serif;
     font-weight: stencilFontWeight("optimizedCheckout-buttonPrimary-font");
@@ -169,7 +169,7 @@ body {
     border-color: stencilColor("optimizedCheckout-buttonSecondary-borderColor");
     color: stencilColor("optimizedCheckout-buttonSecondary-color");
     font-family: stencilFontFamily("optimizedCheckout-buttonSecondary-font"), Arial, Helvetica, sans-serif;
-    border-radius: 9999px;
+    border-radius: 6px;
     text-transform: initial;
     font-weight: stencilFontWeight("optimizedCheckout-buttonSecondary-font");
     overflow: hidden;
@@ -429,6 +429,97 @@ $optimizedCheckout-input--error-boxShadow: 0 0 3px transparentize(stencilColor("
 // Custom styles for the cart
 // -----------------------------------------------------------------------------
 
+a:not(.checkoutHeader-link):not(.form-input-icon) {
+    position: relative;
+    isolation: isolate;
+    display: inline-block;
+
+    &:after {
+        content: '';
+        display: block;
+        height: 1px;
+        width: 100%;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: #b0c3ac;
+        z-index: -1;
+        transform: scaleX(0);
+        transform-origin: left;
+        transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    }
+
+    &:hover {
+        &:after {
+            transform: scaleX(1);
+        }
+    }
+}
+
+header.cart-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.checkoutHeader {
+    min-height: auto;
+    border-bottom: none;
+}
+
+.checkoutHeader-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1.5rem;
+    padding-block: 2rem;
+
+    &:before, &:after {
+        content: none;
+    }
+}
+
+.checkout-heading-layout {
+    min-height: auto;
+    padding-block-start: 64px;
+    padding-block-end: 48px;
+}
+
+.checkoutHeader-heading {
+    font-size: 1.75rem;
+}
+
+.checkout-heading {
+    margin-bottom: 0;
+    font-size: 40px;
+}
+
+.optimizedCheckout-header {
+    background-color: #fff;
+}
+
+.layout-main {
+    padding: 0;
+    border: 1px solid #d4d4d4;
+    border-radius: 8px;
+    overflow: hidden;
+
+    .checkout-steps {
+        padding: 0;
+    }
+
+    .checkout-step {
+        padding-inline: 32px;
+    }
+}
+
+.layout-cart {
+    .cart {
+        margin-top: 0;
+        border: none;
+    }
+}
+
 .form-actions > * {
     vertical-align: bottom;
 }
@@ -438,6 +529,6 @@ $optimizedCheckout-input--error-boxShadow: 0 0 3px transparentize(stencilColor("
 }
 
 .checkoutHeader-link {
-    font-family: stencilFontFamily("headings-font"), "Playfair Display", serif;
+    font-family: stencilFontFamily("headings-font"), "Jost", serif;
     font-weight: 600;
 }
