--- a/assets/scss/settings/global/typography/_typography.scss
+++ b/assets/scss/settings/global/typography/_typography.scss
@@ -21,7 +21,7 @@
 // Font families
 // -----------------------------------------------------------------------------
 
-@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 $fontFamily-sans:               stencilFontFamily("body-font"), "Jost", serif;
