--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -18,7 +18,7 @@
         <h1 class="is-srOnly">{{lang 'checkout.title'}}</h1>
         <div class="checkoutHeader-heading">
             <a class="checkoutHeader-link" href="{{urls.home}}">
-                <img alt="{{settings.store_logo.title}}" class="checkoutHeader-logo" id="logoImage" src="../../assets/img/Logo.svg"/>
+                <img alt="{{settings.store_logo.title}}" class="checkoutHeader-logo" id="logoImage" src="{{cdn 'assets/img/Logo.svg'}}"/>
             </a>
         </div>
         <div>
