--- a/templates/pages/order-confirmation.html
+++ b/templates/pages/order-confirmation.html
@@ -17,11 +17,7 @@
         <h1 class="is-srOnly">{{lang 'checkout.title'}}</h1>
         <h2 class="checkoutHeader-heading">
             <a class="checkoutHeader-link" href="{{urls.home}}">
-                {{#if checkout.header_image}}
-                    <img alt="{{settings.store_logo.title}}" class="checkoutHeader-logo" id="logoImage" src="{{ checkout.header_image }}"/>
-                {{ else }}
-                    <span class="header-logo-text">{{settings.store_logo.title}}</span>
-                {{/if}}
+                <img alt="{{settings.store_logo.title}}" class="checkoutHeader-logo" id="logoImage" src="{{cdn 'assets/img/Logo.svg'}}"/>
             </a>
         </h2>
     </div>
