--- a/assets/scss/optimized-checkout.scss
+++ b/assets/scss/optimized-checkout.scss
@@ -1005,7 +1005,7 @@ header.cart-header {
     padding: 0;
 
     .optimizedCheckout-headingPrimary {
-        font-family: stencilFontFamily("headings-font"), "Playfair Display", serif;
+        font-family: "Playfair Display", serif;
         font-size: 40px;
         line-height: 100%;
         letter-spacing: -0.8px;
