checkout weglot integration

--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -8,6 +8,16 @@
     window.language = {{{langJson 'optimized_checkout'}}};
 </script>
 
+<script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_72487831aec25adf255bece854fad4424'
+        hide_switcher: false,
+        cache: true,
+    });
+    Weglot.switchLanguage(window.language.locale);
+</script>
+
 {{{head.scripts}}}
 
 {{/partial}}
