--- a/templates/pages/order-confirmation.html
+++ b/templates/pages/order-confirmation.html
@@ -3,7 +3,7 @@
 {{{ stylesheet '/assets/css/optimized-checkout.css' }}}
 {{ getFontsCollection }}
 
-<script type="text/javascript">
+<script type="text/javascript" nonce="{{nonce}}">
     window.language = {{{langJson 'optimized_checkout'}}};
 </script>
 
@@ -14,7 +14,13 @@
         hide_switcher: false,
         cache: true,
     });
-    Weglot.switchTo(window.language.locale);
+
+    fetch('/api/storefront/carts', {
+        method: 'GET',
+        credentials: 'same-origin',
+    })
+    .then(response => response.json())
+    .then(data => Weglot.switchTo(data[0].locale));
 </script>
 
 {{{head.scripts}}}
