--- a/templates/pages/order-confirmation.html
+++ b/templates/pages/order-confirmation.html
@@ -11,7 +11,7 @@
 <script>
     Weglot.initialize({
         api_key: 'wg_72487831aec25adf255bece854fad4424',
-        hide_switcher: false,
+        hide_switcher: true,
         cache: true,
     });
 
@@ -20,7 +20,10 @@
         credentials: 'same-origin',
     })
     .then(response => response.json())
-    .then(data => Weglot.switchTo(data[0].locale));
+    .then(data => {
+        if (!data.length) return;
+        setTimeout(() => Weglot.switchTo(data[0]?.locale), 500);
+    });
 </script>
 
 {{{head.scripts}}}
