update checkout and order confirmation page tracking scripts

--- a/templates/pages/order-confirmation.html
+++ b/templates/pages/order-confirmation.html
@@ -7,6 +7,7 @@
     window.language = {{{langJson 'optimized_checkout'}}};
 </script>
 
+<!-- START Weglot -->
 <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
 <script>
     Weglot.initialize({
@@ -25,6 +26,7 @@
         setTimeout(() => Weglot.switchTo(data[0]?.locale), 500);
     });
 </script>
+<!-- END Weglot -->
 
 <!-- START Google Tag Manager -->
 <script>
@@ -83,6 +85,10 @@
     })(window,document,'script','dataLayer', gtm_id );
 </script>
 <!-- END Google Tag Manager -->
+
+<!-- START Klaviyo -->
+<script type="text/javascript" async="" src="https://static.klaviyo.com/onsite/js/X3829f/klaviyo.js"></script>
+<!-- END Klaviyo -->
 
 {{{head.scripts}}}
 
