--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -8,6 +8,7 @@
     window.language = {{{langJson 'optimized_checkout'}}};
 </script>
 
+<!-- START Weglot -->
 <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
 <script>
     Weglot.initialize({
@@ -26,6 +27,7 @@
         setTimeout(() => Weglot.switchTo(data[0]?.locale), 500);
     });
 </script>
+<!-- END Weglot -->
 
 <!-- START Google Tag Manager -->
 <script>
@@ -84,6 +86,10 @@
     })(window,document,'script','dataLayer', gtm_id );
 </script>
 <!-- END Google Tag Manager -->
+
+<!-- START Klaviyo -->
+<script type="text/javascript" async="" src="https://static.klaviyo.com/onsite/js/X3829f/klaviyo.js"></script>
+<!-- END Klaviyo -->
 
 {{{head.scripts}}}
 
