--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -102,6 +102,38 @@
 
 {{{ checkout.checkout_content }}}
 
+<footer class="checkout-footer">
+    <div class="layout">
+        <div class="checkout-footer-wrapper">
+            <ul class="checkout-footer-links">
+                <li class="checkout-footer-link-item">
+                    <a href="https://www.lotuscooking.com/policies/privacy-policy">
+                        Privacy Policy
+                    </a>
+                </li>
+                <li class="checkout-footer-link-item">
+                    <a href="#">
+                        Don't Sell or Share My Information
+                    </a>
+                </li>
+                <li class="checkout-footer-link-item">
+                    <a href="https://www.lotuscooking.com/policies/terms-of-service">
+                        Terms of Service
+                    </a>
+                </li>
+                <li class="checkout-footer-link-item">
+                    <a href="javascript:void(0)" onclick="window.truste.eu.clickListener(); event.preventDefault();">
+                        Cookie Preferences
+                    </a>
+                </li>
+            </ul>
+            <p class="checkout-footer-copyright">
+                &copy; 2025 Lotus
+            </p>
+        </div>
+    </div>
+</footer>
+
 {{{ footer.scripts }}}
 
 {{/partial}}
