--- a/assets/scss/optimized-checkout.scss
+++ b/assets/scss/optimized-checkout.scss
@@ -19,6 +19,11 @@
     outline-color: stencilColor("optimizedCheckout-colorFocus");
 }
 
+*::selection {
+    background-color: stencilColor("optimizedCheckout-colorFocus");
+    color: #ffffff;
+}
+
 .optimizedCheckout-header {
     background-color: stencilColor("optimizedCheckout-header-backgroundColor");
     /* stylelint-disable function-url-quotes*/
@@ -103,28 +108,15 @@ body {
     border-color: stencilColor("optimizedCheckout-buttonPrimary-borderColor");
     color: stencilColor("optimizedCheckout-buttonPrimary-color");
     border-radius: 6px;
+    font-size: 16px;
     text-transform: initial;
     font-family: stencilFontFamily("optimizedCheckout-buttonPrimary-font"), Arial, Helvetica, sans-serif;
     font-weight: stencilFontWeight("optimizedCheckout-buttonPrimary-font");
     overflow: hidden;
 
-    &:after {
-        content: '';
-        display: block;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        inset: 0;
-        border-radius: inherit;
-        background-color: stencilColor("optimizedCheckout-buttonPrimary-backgroundColorHover");
-        z-index: -1;
-        transform: translateX(-100%);
-        transition: transform 0.3s cubic-bezier(0,.25,0,1);
-    }
-
     &:focus,
     &:hover {
-        background-color: stencilColor("optimizedCheckout-buttonPrimary-backgroundColor");
+        background-color: stencilColor("optimizedCheckout-buttonPrimary-backgroundColorHover");
         border-color: stencilColor("optimizedCheckout-buttonPrimary-borderColorHover");
         color: stencilColor("optimizedCheckout-buttonPrimary-colorHover");
 
@@ -169,30 +161,16 @@ body {
     border-color: stencilColor("optimizedCheckout-buttonSecondary-borderColor");
     color: stencilColor("optimizedCheckout-buttonSecondary-color");
     font-family: stencilFontFamily("optimizedCheckout-buttonSecondary-font"), Arial, Helvetica, sans-serif;
+    font-size: 16px;
     border-radius: 6px;
     text-transform: initial;
     font-weight: stencilFontWeight("optimizedCheckout-buttonSecondary-font");
     overflow: hidden;
 
-    &:after {
-        content: '';
-        display: block;
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        inset: 0;
-        border-radius: inherit;
-        background-color: stencilColor("optimizedCheckout-buttonSecondary-color");
-        z-index: -1;
-        transform: translateX(-100%);
-        transition: transform 0.3s cubic-bezier(0,.25,0,1);
-    }
-
     &:focus,
     &:hover {
         background-color: stencilColor("optimizedCheckout-buttonSecondary-backgroundColorHover");
         border-color: stencilColor("optimizedCheckout-buttonSecondary-borderColorHover");
-        color: stencilColor("optimizedCheckout-buttonSecondary-colorHover");
 
         &:after {
             transform: translateX(0);
@@ -219,6 +197,10 @@ body {
         background-color: stencilColor("optimizedCheckout-buttonPrimary-backgroundColorDisabled");
         border-color: stencilColor("optimizedCheckout-buttonPrimary-borderColorDisabled");
         color: stencilColor("optimizedCheckout-buttonPrimary-colorDisabled");
+    }
+
+    &.button--tertiary:hover {
+        color: stencilColor("optimizedCheckout-buttonSecondary-color");
     }
 }
 
@@ -501,7 +483,7 @@ header.cart-header {
 
 .layout-main {
     padding: 0;
-    border: 1px solid #d4d4d4;
+    border: 1px solid #d1d1d1;
     border-radius: 8px;
     overflow: hidden;
     float: none;
@@ -533,6 +515,7 @@ header.cart-header {
     margin-bottom: 0;
     font-size: 24px;
     line-height: 120%;
+    font-family: stencilFontFamily("headings-font"), "Playfair Display", serif;;
 
     @media (min-width: 551px) {
         font-size: 40px;
@@ -640,6 +623,12 @@ header.cart-header {
         content: none;
     }
 
+    .floating-input:not(:focus),
+    .floating-select:not(:focus),
+    .floating-textarea {
+        border-color: #d1d1d1;
+    }
+
     .floating-label {
         position: static;
         order: -1;
@@ -726,7 +715,7 @@ header.cart-header {
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
-        border: 1px solid #D4D4D4;
+        border: 1px solid #d1d1d1;
         border-radius: 8px;
         padding: 16px;
 
@@ -835,6 +824,11 @@ header.cart-header {
     box-shadow: none;
 }
 
+.optimizedCheckout-form-input:focus,
+.optimizedCheckout-form-select:focus {
+    border-color: #6E9365;
+}
+
 [role="combobox"] {
     display: flex;
     flex-direction: column;
@@ -936,7 +930,7 @@ header.cart-header {
         }
 
         &:last-child {
-            border-top: 1px solid #D4D4D4;
+            border-top: 1px solid #D1D1D1;
         }
     }
 }
@@ -947,8 +941,8 @@ header.cart-header {
 
 .productList {
     @media (min-width: 969px) {
-        border-top: 1px solid #D4D4D4;
-        border-bottom: 1px solid #D4D4D4;
+        border-top: 1px solid #D1D1D1;
+        border-bottom: 1px solid #D1D1D1;
     }
 }
 
@@ -957,7 +951,7 @@ header.cart-header {
     padding-block: 16px;
 
     & + .productList-item {
-        border-top: 1px solid #D4D4D4;
+        border-top: 1px solid #D1D1D1;
     }
 
     .product {
@@ -1100,7 +1094,6 @@ header.cart-header {
 // checkout footer
 .checkout-footer {
     padding-block: 48px;
-    border-top: 1px solid #EEEEEE;
 
     .layout {
         min-height: auto;
@@ -1166,10 +1159,26 @@ header.cart-header {
     background-size: 16px;
     background-position: right 16px center;
     background-repeat: no-repeat;
-    min-width: 100px;
-    padding-right: 40px;
+    min-width: 85px;
+    max-height: 40px;
+    padding: 8px 16px 8px 20px;
+
+    &:focus {
+        border-color: #6E9365;
+    }
 }
 
 .checkoutHeader-continueShoppingLink {
     font-size: 16px;
+}
+
+.optimizedCheckout-contentPrimary {
+    &.customerView-body,
+    .checkout-address--static,
+    .shippingOption--selected,
+    .cart-priceItem-postFix {
+        color: #7D7D7D;
+        font-size: 14px;
+        font-weight: 400;
+    }
 }
