--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -8,6 +8,27 @@
     window.language = {{{langJson 'optimized_checkout'}}};
 </script>
 
+<!-- START Weglot -->
+<script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_72487831aec25adf255bece854fad4424',
+        hide_switcher: true,
+        cache: true,
+    });
+
+    fetch('/api/storefront/carts', {
+        method: 'GET',
+        credentials: 'same-origin',
+    })
+    .then(response => response.json())
+    .then(data => {
+        if (!data.length) return;
+        setTimeout(() => Weglot.switchTo(data[0]?.locale), 500);
+    });
+</script>
+<!-- END Weglot -->
+
 <!-- START Google Tag Manager -->
 <script>
     // 1. Rogue Referral Fix for SPA: Save landing page URL
