--- a/templates/pages/checkout.html
+++ b/templates/pages/checkout.html
@@ -109,7 +109,7 @@
                 </select>
             </div>
             <div>
-                <a class="checkoutHeader-continueShoppingLink" href="{{urls.home}}">
+                <a class="checkoutHeader-continueShoppingLink" href="https://www.lotuscooking.com/shop/all">
                     Continue Shopping
                 </a>
             </div>
